Method for inserting new project updates.
