# server/api/gen/project/service.go
@@ -1,0 +1,43 @@
+// Code generated by goa v3.1.1, DO NOT EDIT.
+//
+// project service
+//
+// Command:
+// $ goa gen github.com/fieldkit/cloud/server/api/design
+
+package project
+
+import (
+	"context"
+
+	"goa.design/goa/v3/security"
+)
+
+// Service is the project service interface.
+type Service interface {
+	// Update implements update.
+	Update(context.Context, *UpdatePayload) (err error)
+}
+
+// Auther defines the authorization functions to be implemented by the service.
+type Auther interface {
+	// JWTAuth implements the authorization logic for the JWT security scheme.
+	JWTAuth(ctx context.Context, token string, schema *security.JWTScheme) (context.Context, error)
+}
+
+// ServiceName is the name of the service as defined in the design. This is the
+// same value that is set in the endpoint request contexts under the ServiceKey
+// key.
+const ServiceName = "project"
+
+// MethodNames lists the service method names as defined in the design. These
+// are the same values that are set in the endpoint request contexts under the
+// MethodKey key.
+var MethodNames = [1]string{"update"}
+
+// UpdatePayload is the payload type of the project service update method.
+type UpdatePayload struct {
+	Auth *string
+	ID   int64
+	Body string
+}
