# server/api/goa_services.go
@@ -29,6 +29,9 @@ import (
 
 	activity "github.com/fieldkit/cloud/server/api/gen/activity"
 	activitySvr "github.com/fieldkit/cloud/server/api/gen/http/activity/server"
+
+	projectSvr "github.com/fieldkit/cloud/server/api/gen/http/project/server"
+	project "github.com/fieldkit/cloud/server/api/gen/project"
 )
 
 func LogErrors() func(goa.Endpoint) goa.Endpoint {
@@ -61,6 +64,9 @@ func CreateGoaV3Handler(ctx context.Context, options *ControllerOptions) http.Ha
 	activitySvc := NewActivityService(ctx, options)
 	activityEndpoints := activity.NewEndpoints(activitySvc)
 
+	projectSvc := NewProjectService(ctx, options)
+	projectEndpoints := project.NewEndpoints(projectSvc)
+
 	logErrors := LogErrors()
 
 	modulesEndpoints.Use(logErrors)
@@ -68,6 +74,7 @@ func CreateGoaV3Handler(ctx context.Context, options *ControllerOptions) http.Ha
 	testEndpoints.Use(logErrors)
 	followingEndpoints.Use(logErrors)
 	activityEndpoints.Use(logErrors)
+	projectEndpoints.Use(logErrors)
 
 	// Provide the transport specific request decoder and response encoder.
 	// The goa http package has built-in support for JSON, XML and gob.
@@ -84,12 +91,14 @@ func CreateGoaV3Handler(ctx context.Context, options *ControllerOptions) http.Ha
 	modulesServer := modulesSvr.New(modulesEndpoints, mux, dec, enc, eh, nil)
 	followingServer := followingSvr.New(followingEndpoints, mux, dec, enc, eh, nil)
 	activityServer := activitySvr.New(activityEndpoints, mux, dec, enc, eh, nil)
+	projectServer := projectSvr.New(projectEndpoints, mux, dec, enc, eh, nil)
 
 	tasksSvr.Mount(mux, tasksServer)
 	testSvr.Mount(mux, testServer)
 	modulesSvr.Mount(mux, modulesServer)
 	followingSvr.Mount(mux, followingServer)
 	activitySvr.Mount(mux, activityServer)
+	projectSvr.Mount(mux, projectServer)
 
 	log := Logger(ctx).Sugar()
 
@@ -106,6 +115,9 @@ func CreateGoaV3Handler(ctx context.Context, options *ControllerOptions) http.Ha
 		log.Infow("mounted", "method", m.Method, "verb", m.Verb, "pattern", m.Pattern)
 	}
 	for _, m := range activityServer.Mounts {
+		log.Infow("mounted", "method", m.Method, "verb", m.Verb, "pattern", m.Pattern)
+	}
+	for _, m := range projectServer.Mounts {
 		log.Infow("mounted", "method", m.Method, "verb", m.Verb, "pattern", m.Pattern)
 	}
 
